# mlops_mipt

./: .gitignore  .pre-commit-config.yaml  LICENSE  pyproject.toml
mlops_mipt/: constants.py  infer.py  train.py
